--- a/LightBox/LightBox.vcxproj
+++ b/LightBox/LightBox.vcxproj
@@ -160,6 +160,7 @@
     <ClInclude Include="src\Layer.h" />
     <ClInclude Include="src\Mat4.h" />
     <ClInclude Include="src\Material.h" />
+    <ClInclude Include="src\Mesh.h" />
     <ClInclude Include="src\PathTracer.h" />
     <ClInclude Include="src\Pipeline.h" />
     <ClInclude Include="src\Quat.h" />
@@ -172,6 +173,7 @@
     <ClInclude Include="src\Sphere.h" />
     <ClInclude Include="src\Swapchain.h" />
     <ClInclude Include="src\Timer.h" />
+    <ClInclude Include="src\Triangle.h" />
     <ClInclude Include="src\Utils.h" />
     <ClInclude Include="src\Vector2.h" />
     <ClInclude Include="src\Vector3.h" />
@@ -192,6 +194,7 @@
     <ClCompile Include="src\Input\Input.cpp" />
     <ClCompile Include="src\LightBoxApp.cpp" />
     <ClCompile Include="src\Mat4.cpp" />
+    <ClCompile Include="src\Mesh.cpp" />
     <ClCompile Include="src\PathTracer.cpp" />
     <ClCompile Include="src\Pipeline.cpp" />
     <ClCompile Include="src\Quat.cpp" />
@@ -203,6 +206,7 @@
     <ClCompile Include="src\Scene.cpp" />
     <ClCompile Include="src\Sphere.cpp" />
     <ClCompile Include="src\Swapchain.cpp" />
+    <ClCompile Include="src\Triangle.cpp" />
     <ClCompile Include="src\Utils.cpp" />
     <ClCompile Include="src\Vector2.cpp" />
     <ClCompile Include="src\Vector3.cpp" />
