restructure project, add save render as image functionality, add gamma transformation for saved images

--- a/LightBox/LightBox.vcxproj
+++ b/LightBox/LightBox.vcxproj
@@ -144,78 +144,82 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="src\Scene.h" />
     <ClInclude Include="src\Node.h" />
     <ClInclude Include="src\AABB.h" />
     <ClInclude Include="src\Application.h" />
     <ClInclude Include="src\BVH_Node.h" />
-    <ClInclude Include="src\Buffer.h" />
+    <ClInclude Include="src\Vulkan\Buffer.h" />
     <ClInclude Include="src\Camera.h" />
-    <ClInclude Include="src\Device.h" />
+    <ClInclude Include="src\Vulkan\Device.h" />
     <ClInclude Include="src\EntryPoint.h" />
     <ClInclude Include="src\Hittable.h" />
     <ClInclude Include="src\HittableList.h" />
-    <ClInclude Include="src\Image.h" />
+    <ClInclude Include="src\Vulkan\Image.h" />
     <ClInclude Include="src\Input\Input.h" />
     <ClInclude Include="src\Input\KeyCodes.h" />
     <ClInclude Include="src\Interval.h" />
     <ClInclude Include="src\Layer.h" />
-    <ClInclude Include="src\Mat4.h" />
+    <ClInclude Include="src\Math\Mat4.h" />
     <ClInclude Include="src\Material.h" />
     <ClInclude Include="src\Mesh.h" />
-    <ClInclude Include="src\PathTracer.h" />
-    <ClInclude Include="src\Pipeline.h" />
-    <ClInclude Include="src\Quat.h" />
-    <ClInclude Include="src\RTPipeline.h" />
-    <ClInclude Include="src\Random.h" />
+    <ClInclude Include="src\Vulkan\VulkanRT\GpuPathTracer.h" />
+    <ClInclude Include="src\Vulkan\Pipeline.h" />
+    <ClInclude Include="src\Math\Quat.h" />
+    <ClInclude Include="src\Vulkan\VulkanRT\RTPipeline.h" />
+    <ClInclude Include="src\Math\Random.h" />
     <ClInclude Include="src\Ray.h" />
-    <ClInclude Include="src\Renderer.h" />
-    <ClInclude Include="src\Renderer2.h" />
-    <ClInclude Include="src\Scene.h" />
+    <ClInclude Include="src\CpuPathTracer.h" />
+    <ClInclude Include="src\Vulkan\GpuRenderer.h" />
+    <ClInclude Include="src\Vulkan\VulkanRT\VulkanRTScene.h" />
     <ClInclude Include="src\Sphere.h" />
-    <ClInclude Include="src\Swapchain.h" />
+    <ClInclude Include="src\Vulkan\Swapchain.h" />
     <ClInclude Include="src\Timer.h" />
     <ClInclude Include="src\Triangle.h" />
     <ClInclude Include="src\Utils.h" />
-    <ClInclude Include="src\Vector2.h" />
-    <ClInclude Include="src\Vector3.h" />
-    <ClInclude Include="src\Vector4.h" />
+    <ClInclude Include="src\Math\Vector2.h" />
+    <ClInclude Include="src\Math\Vector3.h" />
+    <ClInclude Include="src\Math\Vector4.h" />
     <ClInclude Include="src\Vertex.h" />
     <ClInclude Include="src\Viewport.h" />
-    <ClInclude Include="src\VulkanUtils.h" />
+    <ClInclude Include="src\Vulkan\VulkanUtils.h" />
+    <ClInclude Include="src\Vulkan\VulkanScene.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Scene.cpp" />
     <ClCompile Include="src\Node.cpp" />
     <ClCompile Include="src\AABB.cpp" />
     <ClCompile Include="src\Application.cpp" />
-    <ClCompile Include="src\Buffer.cpp" />
+    <ClCompile Include="src\Vulkan\Buffer.cpp" />
     <ClCompile Include="src\Camera.cpp" />
-    <ClCompile Include="src\Device.cpp" />
+    <ClCompile Include="src\Vulkan\Device.cpp" />
     <ClCompile Include="src\HittableList.cpp" />
     <ClCompile Include="src\ImGuiBackends\ImGuiBuild.cpp" />
-    <ClCompile Include="src\Image.cpp" />
+    <ClCompile Include="src\Vulkan\Image.cpp" />
     <ClCompile Include="src\Input\Input.cpp" />
     <ClCompile Include="src\LightBoxApp.cpp" />
-    <ClCompile Include="src\Mat4.cpp" />
+    <ClCompile Include="src\Math\Mat4.cpp" />
     <ClCompile Include="src\Mesh.cpp" />
-    <ClCompile Include="src\PathTracer.cpp" />
-    <ClCompile Include="src\Pipeline.cpp" />
-    <ClCompile Include="src\Quat.cpp" />
-    <ClCompile Include="src\RTPipeline.cpp" />
-    <ClCompile Include="src\Random.cpp" />
+    <ClCompile Include="src\Vulkan\VulkanRT\GpuPathTracer.cpp" />
+    <ClCompile Include="src\Vulkan\Pipeline.cpp" />
+    <ClCompile Include="src\Math\Quat.cpp" />
+    <ClCompile Include="src\Vulkan\VulkanRT\RTPipeline.cpp" />
+    <ClCompile Include="src\Math\Random.cpp" />
     <ClCompile Include="src\Ray.cpp" />
-    <ClCompile Include="src\Renderer.cpp" />
-    <ClCompile Include="src\Renderer2.cpp" />
-    <ClCompile Include="src\Scene.cpp" />
+    <ClCompile Include="src\CpuPathTracer.cpp" />
+    <ClCompile Include="src\Vulkan\GpuRenderer.cpp" />
+    <ClCompile Include="src\Vulkan\VulkanRT\VulkanRTScene.cpp" />
     <ClCompile Include="src\Sphere.cpp" />
-    <ClCompile Include="src\Swapchain.cpp" />
+    <ClCompile Include="src\Vulkan\Swapchain.cpp" />
     <ClCompile Include="src\Triangle.cpp" />
     <ClCompile Include="src\Utils.cpp" />
-    <ClCompile Include="src\Vector2.cpp" />
-    <ClCompile Include="src\Vector3.cpp" />
-    <ClCompile Include="src\Vector4.cpp" />
+    <ClCompile Include="src\Math\Vector2.cpp" />
+    <ClCompile Include="src\Math\Vector3.cpp" />
+    <ClCompile Include="src\Math\Vector4.cpp" />
     <ClCompile Include="src\Vertex.cpp" />
     <ClCompile Include="src\Viewport.cpp" />
-    <ClCompile Include="src\VulkanUtils.cpp" />
+    <ClCompile Include="src\Vulkan\VulkanUtils.cpp" />
+    <ClCompile Include="src\Vulkan\VulkanScene.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\vendor\imgui\ImGui.vcxproj">
