implement camera serialization

--- a/LightBox/imgui.ini
+++ b/LightBox/imgui.ini
@@ -1,43 +1,53 @@
 [Window][DockSpace Demo]
 Pos=0,0
-Size=1920,1017
+Size=1920,1001
 Collapsed=0
 
 [Window][Debug##Default]
-Pos=101,560
+ViewportPos=596,865
+ViewportId=0x9F5F46A1
 Size=400,400
 Collapsed=0
 
 [Window][Viewport]
 Pos=0,0
-Size=1413,1017
+Size=1442,1001
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Settings]
-Pos=1415,665
-Size=505,352
+Pos=1444,515
+Size=476,486
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000007,1
 
 [Window][Scene]
-Pos=1415,0
-Size=505,339
+Pos=1444,0
+Size=476,513
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Camera]
-Pos=1415,341
-Size=505,322
+Pos=1444,515
+Size=476,486
 Collapsed=0
 DockId=0x00000007,0
 
+[Window][Outliner]
+Pos=1444,0
+Size=476,513
+Collapsed=0
+DockId=0x00000006,1
+
+[Window][Outnewliner]
+Pos=60,60
+Size=274,338
+Collapsed=0
+
 [Docking][Data]
-DockSpace       ID=0xF2944C7F Window=0x4647B76E Pos=0,23 Size=1920,1017 Split=X Selected=0x13926F0B
-  DockNode      ID=0x00000002 Parent=0xF2944C7F SizeRef=1413,661 CentralNode=1 Selected=0x13926F0B
-  DockNode      ID=0x00000003 Parent=0xF2944C7F SizeRef=505,661 Split=Y Selected=0x54723243
-    DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=609,232 Split=Y Selected=0xE192E354
-      DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=609,118 Selected=0xE192E354
-      DockNode  ID=0x00000007 Parent=0x00000001 SizeRef=609,112 Selected=0x0545BD69
-    DockNode    ID=0x00000004 Parent=0x00000003 SizeRef=609,123 Selected=0x54723243
+DockSpace     ID=0xF2944C7F Window=0x4647B76E Pos=0,29 Size=1920,1001 Split=X Selected=0x13926F0B
+  DockNode    ID=0x00000002 Parent=0xF2944C7F SizeRef=1442,661 CentralNode=1 Selected=0x13926F0B
+  DockNode    ID=0x00000003 Parent=0xF2944C7F SizeRef=476,661 Split=Y Selected=0x54723243
+    DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=609,513 Selected=0x94263E27
+    DockNode  ID=0x00000007 Parent=0x00000003 SizeRef=609,486 Selected=0x54723243
 
