--- a/LightBox/LightBox.vcxproj
+++ b/LightBox/LightBox.vcxproj
@@ -78,8 +78,8 @@
     <ClCompile>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
-      <PreprocessorDefinitions>WL_PLATFORM_WINDOWS;WL_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>src;C:\VulkanSDK\1.3.250.0\Include;..\vendor\imgui;..\vendor\glfw-3.3.8.bin.WIN64\Include;..\vendor\glm;..\vendor\stb_image;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>YAML_CPP_STATIC_DEFINE;WL_PLATFORM_WINDOWS;WL_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>src;C:\VulkanSDK\1.3.250.0\Include;..\vendor\imgui;..\vendor\yaml-cpp\include;..\vendor\glfw-3.3.8.bin.WIN64\Include;..\vendor\glm;..\vendor\stb_image;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <Optimization>Disabled</Optimization>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
@@ -97,8 +97,8 @@
     <ClCompile>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
-      <PreprocessorDefinitions>WL_PLATFORM_WINDOWS;WL_RELEASE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>src;C:\VulkanSDK\1.3.250.0\Include;..\vendor\imgui;..\vendor\glfw-3.3.8.bin.WIN64\Include;..\vendor\glm;..\vendor\stb_image;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>YAML_CPP_STATIC_DEFINE;WL_PLATFORM_WINDOWS;WL_RELEASE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>src;C:\VulkanSDK\1.3.250.0\Include;..\vendor\imgui;..\vendor\yaml-cpp\include;..\vendor\glfw-3.3.8.bin.WIN64\Include;..\vendor\glm;..\vendor\stb_image;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
@@ -122,8 +122,8 @@
     <ClCompile>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
-      <PreprocessorDefinitions>WL_PLATFORM_WINDOWS;WL_DIST;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>src;C:\VulkanSDK\1.3.250.0\Include;..\vendor\imgui;..\vendor\glfw-3.3.8.bin.WIN64\Include;..\vendor\glm;..\vendor\stb_image;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>YAML_CPP_STATIC_DEFINE;WL_PLATFORM_WINDOWS;WL_DIST;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>src;C:\VulkanSDK\1.3.250.0\Include;..\vendor\imgui;..\vendor\yaml-cpp\include;..\vendor\glfw-3.3.8.bin.WIN64\Include;..\vendor\glm;..\vendor\stb_image;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DebugInformationFormat>None</DebugInformationFormat>
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
@@ -144,86 +144,98 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="src\Scene.h" />
-    <ClInclude Include="src\Node.h" />
     <ClInclude Include="src\AABB.h" />
     <ClInclude Include="src\Application.h" />
     <ClInclude Include="src\BVH_Node.h" />
-    <ClInclude Include="src\Vulkan\Buffer.h" />
     <ClInclude Include="src\Camera.h" />
-    <ClInclude Include="src\Vulkan\Device.h" />
+    <ClInclude Include="src\ChCamera.h" />
+    <ClInclude Include="src\CpuPathTracer.h" />
     <ClInclude Include="src\EntryPoint.h" />
     <ClInclude Include="src\Hittable.h" />
     <ClInclude Include="src\HittableList.h" />
-    <ClInclude Include="src\Vulkan\Image.h" />
+    <ClInclude Include="src\HostImage.h" />
     <ClInclude Include="src\Input\Input.h" />
     <ClInclude Include="src\Input\KeyCodes.h" />
     <ClInclude Include="src\Interval.h" />
     <ClInclude Include="src\Layer.h" />
-    <ClInclude Include="src\Math\Mat4.h" />
     <ClInclude Include="src\Material.h" />
-    <ClInclude Include="src\Mesh.h" />
-    <ClInclude Include="src\Vulkan\VulkanRT\GpuPathTracer.h" />
-    <ClInclude Include="src\Vulkan\Pipeline.h" />
+    <ClInclude Include="src\Math\Mat4.h" />
     <ClInclude Include="src\Math\Quat.h" />
-    <ClInclude Include="src\Vulkan\VulkanRT\RTPipeline.h" />
     <ClInclude Include="src\Math\Random.h" />
-    <ClInclude Include="src\Ray.h" />
-    <ClInclude Include="src\CpuPathTracer.h" />
-    <ClInclude Include="src\Vulkan\GpuRenderer.h" />
-    <ClInclude Include="src\Vulkan\VulkanRT\VulkanRTScene.h" />
-    <ClInclude Include="src\Sphere.h" />
-    <ClInclude Include="src\Vulkan\Swapchain.h" />
-    <ClInclude Include="src\Timer.h" />
-    <ClInclude Include="src\Triangle.h" />
-    <ClInclude Include="src\Utils.h" />
     <ClInclude Include="src\Math\Vector2.h" />
     <ClInclude Include="src\Math\Vector3.h" />
     <ClInclude Include="src\Math\Vector4.h" />
+    <ClInclude Include="src\Mesh.h" />
+    <ClInclude Include="src\Node.h" />
+    <ClInclude Include="src\Ray.h" />
+    <ClInclude Include="src\Scene.h" />
+    <ClInclude Include="src\SceneHierarchyPanel.h" />
+    <ClInclude Include="src\SceneSerializer.h" />
+    <ClInclude Include="src\Sphere.h" />
+    <ClInclude Include="src\Texture.h" />
+    <ClInclude Include="src\Timer.h" />
+    <ClInclude Include="src\Triangle.h" />
+    <ClInclude Include="src\Utils.h" />
     <ClInclude Include="src\Vertex.h" />
     <ClInclude Include="src\Viewport.h" />
-    <ClInclude Include="src\Vulkan\VulkanUtils.h" />
+    <ClInclude Include="src\Vulkan\Buffer.h" />
+    <ClInclude Include="src\Vulkan\Device.h" />
+    <ClInclude Include="src\Vulkan\GpuRenderer.h" />
+    <ClInclude Include="src\Vulkan\Image.h" />
+    <ClInclude Include="src\Vulkan\Pipeline.h" />
+    <ClInclude Include="src\Vulkan\Swapchain.h" />
+    <ClInclude Include="src\Vulkan\VulkanRT\GpuPathTracer.h" />
+    <ClInclude Include="src\Vulkan\VulkanRT\RTPipeline.h" />
+    <ClInclude Include="src\Vulkan\VulkanRT\VulkanRTScene.h" />
     <ClInclude Include="src\Vulkan\VulkanScene.h" />
+    <ClInclude Include="src\Vulkan\VulkanUtils.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\Scene.cpp" />
-    <ClCompile Include="src\Node.cpp" />
     <ClCompile Include="src\AABB.cpp" />
     <ClCompile Include="src\Application.cpp" />
-    <ClCompile Include="src\Vulkan\Buffer.cpp" />
     <ClCompile Include="src\Camera.cpp" />
-    <ClCompile Include="src\Vulkan\Device.cpp" />
+    <ClCompile Include="src\ChCamera.cpp" />
+    <ClCompile Include="src\CpuPathTracer.cpp" />
     <ClCompile Include="src\HittableList.cpp" />
+    <ClCompile Include="src\HostImage.cpp" />
     <ClCompile Include="src\ImGuiBackends\ImGuiBuild.cpp" />
-    <ClCompile Include="src\Vulkan\Image.cpp" />
     <ClCompile Include="src\Input\Input.cpp" />
     <ClCompile Include="src\LightBoxApp.cpp" />
     <ClCompile Include="src\Math\Mat4.cpp" />
-    <ClCompile Include="src\Mesh.cpp" />
-    <ClCompile Include="src\Vulkan\VulkanRT\GpuPathTracer.cpp" />
-    <ClCompile Include="src\Vulkan\Pipeline.cpp" />
     <ClCompile Include="src\Math\Quat.cpp" />
-    <ClCompile Include="src\Vulkan\VulkanRT\RTPipeline.cpp" />
     <ClCompile Include="src\Math\Random.cpp" />
-    <ClCompile Include="src\Ray.cpp" />
-    <ClCompile Include="src\CpuPathTracer.cpp" />
-    <ClCompile Include="src\Vulkan\GpuRenderer.cpp" />
-    <ClCompile Include="src\Vulkan\VulkanRT\VulkanRTScene.cpp" />
-    <ClCompile Include="src\Sphere.cpp" />
-    <ClCompile Include="src\Vulkan\Swapchain.cpp" />
-    <ClCompile Include="src\Triangle.cpp" />
-    <ClCompile Include="src\Utils.cpp" />
     <ClCompile Include="src\Math\Vector2.cpp" />
     <ClCompile Include="src\Math\Vector3.cpp" />
     <ClCompile Include="src\Math\Vector4.cpp" />
+    <ClCompile Include="src\Mesh.cpp" />
+    <ClCompile Include="src\Node.cpp" />
+    <ClCompile Include="src\Ray.cpp" />
+    <ClCompile Include="src\Scene.cpp" />
+    <ClCompile Include="src\SceneHierarchyPanel.cpp" />
+    <ClCompile Include="src\SceneSerializer.cpp" />
+    <ClCompile Include="src\Sphere.cpp" />
+    <ClCompile Include="src\Triangle.cpp" />
+    <ClCompile Include="src\Utils.cpp" />
     <ClCompile Include="src\Vertex.cpp" />
     <ClCompile Include="src\Viewport.cpp" />
-    <ClCompile Include="src\Vulkan\VulkanUtils.cpp" />
+    <ClCompile Include="src\Vulkan\Buffer.cpp" />
+    <ClCompile Include="src\Vulkan\Device.cpp" />
+    <ClCompile Include="src\Vulkan\GpuRenderer.cpp" />
+    <ClCompile Include="src\Vulkan\Image.cpp" />
+    <ClCompile Include="src\Vulkan\Pipeline.cpp" />
+    <ClCompile Include="src\Vulkan\Swapchain.cpp" />
+    <ClCompile Include="src\Vulkan\VulkanRT\GpuPathTracer.cpp" />
+    <ClCompile Include="src\Vulkan\VulkanRT\RTPipeline.cpp" />
+    <ClCompile Include="src\Vulkan\VulkanRT\VulkanRTScene.cpp" />
     <ClCompile Include="src\Vulkan\VulkanScene.cpp" />
+    <ClCompile Include="src\Vulkan\VulkanUtils.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\vendor\imgui\ImGui.vcxproj">
       <Project>{C0FF640D-2C14-8DBE-F595-301E616989EF}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\vendor\yaml-cpp\yaml-cpp.vcxproj">
+      <Project>{88F1A057-74BE-FB62-9DD7-E90A890331F1}</Project>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
